welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:1: error: value ||! is not a member of Boolean
def sleepIn(weekday:Boolean, vacation:Boolean): Boolean = 	vacation||!weekday
                                                                        ^